Clear rnks dialog open fix; vwprt scale for plyr/rnks adjs; dlg ovrly z-index > fixed hdr (jq ui custm used)

--- a/DodgeDynasty/Content/Site.css
+++ b/DodgeDynasty/Content/Site.css
@@ -22,7 +22,7 @@ body
 
 header {
 	background-color: #fff;
-	z-index: 99999;
+	z-index: 12344;
 	border-bottom: 1px solid #e6e6e6;
 }
 
