--- a/DodgeDynasty/Content/themes/base/jquery-ui.css
+++ b/DodgeDynasty/Content/themes/base/jquery-ui.css
@@ -50,7 +50,7 @@
 }
 
 .ui-front {
-	z-index: 100;
+	z-index: 12345;
 }
 
 
